@@ -12,6 +12,12 @@ What's New in Python 2.7 beta 2?
 Core and Builtins
 -----------------
 
+- Issue #1533: fix inconsistency in range function argument
+  processing: any non-float non-integer argument is now converted to
+  an integer (if possible) using its __int__ method.  Previously, only
+  small arguments were treated this way; larger arguments (those whose
+  __int__ was outside the range of a C long) would produce a TypeError.
+
 - Issue #8202: sys.argv[0] is now set to '-m' instead of '-c' when
   searching for the module file to be executed with the -m command
   line option
